Compiler/tests/good/Ifs/04_if.rs
fn main(){
    let x : i32 = 10;

    if x > 12 {
        println!(1);
    } else if x < 12 {
        println!(2);
    } else {
        println!(3);
    }
    return;
}