Compiler/tests/bad/Variables/06_variable.rs
fn main(){
    let x : Vec3<i32> = 8;
}
